@@ -36,7 +36,7 @@ $_lang['office_auth_err_email_ns'] = 'You must specify your email';
 $_lang['office_auth_err_email_username_ns'] = 'You must specify your login or email';
 $_lang['office_auth_err_email_nf'] = 'A user with the specified email is not found';
 $_lang['office_auth_err_email_username_nf'] = 'A user is not found';
-$_lang['office_auth_err_user_active'] = 'You have not activated your account';
+$_lang['office_auth_err_user_active'] = 'You have not activated your account, so we sent again you a link to activate.';
 $_lang['office_auth_err_email_exists'] = 'A user with this email is already exists';
 $_lang['office_auth_err_username_exists'] = 'A user with this login is already exists';
 $_lang['office_auth_err_password_short'] = 'The password is too short. The minimum length of the password: [[+req]] characters.';
