@@ -36,7 +36,7 @@ $_lang['office_auth_err_email_ns'] = 'Вы должны указать email';
 $_lang['office_auth_err_email_username_ns'] = 'Вы должны указать email или логин';
 $_lang['office_auth_err_email_nf'] = 'Пользователь с указанным email не найден';
 $_lang['office_auth_err_email_username_nf'] = 'Пользователь не найден';
-$_lang['office_auth_err_user_active'] = 'Вы еще не активировали свой аккаунт';
+$_lang['office_auth_err_user_active'] = 'Вы еще не активировали свой аккаунт, поэтому мы снова отправили вам ссылку на активацию.';
 $_lang['office_auth_err_email_exists'] = 'Пользователь с таким email уже существует';
 $_lang['office_auth_err_username_exists'] = 'Пользователь с таким логином уже существует';
 $_lang['office_auth_err_password_short'] = 'Слишком короткий пароль. Минимальная длин пароля: [[+req]] символов.';
