@@ -5,6 +5,7 @@ Changelog for Office.
 - [miniShop2] Fixed empty product names in order grid on MS2 < 2.1.8.
 - [Auth] Added "username" and "fullname" fields to registration form.
 - [Auth] Ability to use username or email for login.
+- [Auth] User will receive activation email if he trying to login and his account was not activated.
 
 1.1.0-beta
 ==============
